--- a/buildr/CHANGELOG
+++ b/buildr/CHANGELOG
@@ -1,3 +1,8 @@
+1.4.0 (Pending)
+* Added:  BUILDR-328 Detect Eclipse plugin project with META-INF/MANIFEST.MF and Bundle-SymbolicName:
+          entry
+* Fixed:  BUILDR-327 Specifying :plugin eclipse nature explicitly fails
+
 1.3.5 (2009-10-05)
 * Added:  Interactive shell (REPL) support
 * Added:  BeanShell as default shell for java projects, bsh is small and it's
