--- a/buildr/CHANGELOG
+++ b/buildr/CHANGELOG
@@ -1,12 +1,40 @@
 1.4.0 (Pending)
+* Added:  Project extensions (before/after_define) now support dependency ordering
+          similar to Rake (e.g. before_define(:my_setup => :compile)
 * Added:  BUILDR-328 Detect Eclipse plugin project with META-INF/MANIFEST.MF 
           and Bundle-SymbolicName: entry
 * Added:  Support for Eclipse classpath variables to avoid absolute pathnames in
           generated .classpath using: 
             eclipse.classpath_variables { :VAR => '/path/to/libraries' }
+* Added:  Support for excluding libraries from Eclipse classpath using:
+            eclipse.exclude_libs += ['/path/to/some/library.jar']
+* Added:  Environment variable IGNORE_BUILDFILE can be set to "yes" or
+          "true" to ignore changes in Buildfile when running tests.
+* Added:  "buildr test=only" will only run tests explicitly specified on the
+          command line (and ignore transitive test dependencies)
+* Change: Updated to JRuby 1.4.0
+* Change: Updated to JtestR 0.5
+* Change: Updated to JUnit 4.7
+* Change: Load buildr.rb from $HOME/.buildr instead of $HOME
+          ($HOME/buildr.rb is still loaded with deprecation warning)
+* Fixed:  BUILDR-223 Release Task: customizable commit message (Alexis Midon)
+* Fixed:  BUILDR-330  Install task should re-install artifact even if they 
+          already exist (Alexis Midon)
 * Fixed:  BUILDR-334 Eclipse .classpath files use absolute paths for library 
           entries (Stefan Wasilewski)
 * Fixed:  BUILDR-327 Specifying :plugin eclipse nature explicitly fails
+* Fixed:  buildr test=all didn't run all tests as expected
+* Fixed:  BUILDR-344 Buildr::TestFramework::TestResult::YamlFormatter uses 
+          deprecated form of example_pending (Rhett Sutphin)
+* Fixed:  BUILDR-345 Improve project documentation (Peter Schröder)
+* Fixed:  BUILDR-346 Test classpath can not be set (Peter Schröder)
+* Fixed:  BUILDR-347 Compile.from does not work correctly with FileTask when
+          no compiler is set (Peter Schröder)
+* Fixed:  BUILDR-349 resources.filter should use defaults from profile.yaml
+          even if mapping is provided
+* Fixed:  Fail-fast if package.with() or include() called with nil values
+* Fixed:  Failures not reported correctly for ScalaTest (Alex Eagle)
+* Fixed:  Test dependencies should include test compile dependencies
 
 1.3.5 (2009-10-05)
 * Added:  Interactive shell (REPL) support
@@ -37,7 +65,7 @@
 * Fixed:  BUILDR-315 Fix Eclipse .classpath for local libraries (Mat Schaffer)
 * Fixed:  BUILDR-304 Referencing an existing package task using the package
           method fails if the package has a custom filename (Rhett Sutphin)
-* Fixed:  BUILDR-322 When specifying files (instead of directories) as sources for compile task, 
+* Fixed:  BUILDR-322 When specifying files (instead of directories) as sources for compile task,
           Buildr uses target directory timestamp only (not compiled output timestamp)
 * Fixed:  BUILDR-324: Regression - baseDir system property is not set when executing tests [Alexis Midon]
 * Fixed:  BUILDR-325: Overriding package spec with classifer doesn't work (Antoine Toulme)
@@ -51,7 +79,7 @@
           for artifact jars.
 * Added:  BUILDR-222 Support Git as a version control system
 * Added   BUILDR-223 Release Task: customizable commit message
-* Added:  BUILDR-242 Include Scala-Tools Repository by Default.  
+* Added:  BUILDR-242 Include Scala-Tools Repository by Default.
 * Added:  BUILDR-268 Allow proxying for https connections (Joel Muzzerall).
 * Added:  Info message "Packaging filename.ext" now displayed for packaging tasks
 * Added:  Added Scala.version and Scala.version_str
@@ -65,13 +93,13 @@
 * Change: Upgraded to use JRuby 1.1.6 (when auto-installing).
 * Change: Buildr, no longer in incubation (hurray!): new site, mailing list, SVN, Git.
 * Change: BUILDR-171 Eclipse task generates meta-data files for projects with
-          test source code but no main source code. 
+          test source code but no main source code.
 * Change: BUILDR-177 Moved cobertura and emma extensions to lib directory.
 * Change: BUILDR-187 Source code attachment for Eclipse .classpath.
 * Change: BUILDR-188 Source code attachment for IDEA .iml file (Marko Sibakov).
 * Change: BUILDR-209 Scala Specs Should Use src/specs/scala/
 * Change: BUILDR-237 Use MacPorts Scala on OS X.
-* Change: BUILDR-260 Upgrade to Scala 2.7.3 compatible dependencies:  
+* Change: BUILDR-260 Upgrade to Scala 2.7.3 compatible dependencies:
           ScalaSpecs 1.4.3, ScalaCheck 1.5 and ScalaTest 0.9.5
 * Change: Buildr now uses Jekyll to generate Web site/documentation:
 http://github.com/mojombo/jekyll/ This replaces Docter so less code to
@@ -159,7 +187,7 @@ no longer running with the rake command.
           like java.util.Properties (Lacton).
 * Fixed:  BUILDR-116: TestTask should include the main compile target in its
           dependencies, even when using non standard directories (Lacton).
-* Fixed:  BUILDR-117 Shared directory for both code and resources produces 
+* Fixed:  BUILDR-117 Shared directory for both code and resources produces
           duplicate Eclipse classpath entries (Nathan Hamblen)
 * Fixed:  BUILDR-119 Eclipse task does not accept test resource folders
           (Lacton)
@@ -176,7 +204,7 @@ no longer running with the rake command.
 * Fixed:  BUILDR-138 ScalaTest premature use of Buildr::Repositories
           inconsistent with customizing locations.
 * Fixed:  BUILDR-152 Project.task fails when task name starts with a colon.
-* Fixed:  BUILDR-157 Tasks library not loaded from a submodule. 
+* Fixed:  BUILDR-157 Tasks library not loaded from a submodule.
 * Docs:   BUILDR-111 Troubleshoot tip when Buildr's bin directory shows up in
           RUBYLIB (Geoffrey Ruscoe).
 
@@ -235,7 +263,7 @@ JRuby.
 * Added: Cobertura tasks can be invoked for a single project using project
 name as prefix to cobetura tasks.
 * Added: Cobertura can exclude specified classes from instrumentation.
-* Added: ArchiveTask#clean can be used to remove content from a package. 
+* Added: ArchiveTask#clean can be used to remove content from a package.
 * Added: Groovy compiler.
 * Added: Mechanism to simplify creating extensions (see Extension module).
 * Added: To run all test cases 'rake spec'.  Test coverage reports will show
@@ -246,7 +274,7 @@ places where paths were used instead of path names.
 * Added: EAR packaging (Victor Hugo Borja).
 * Added: Profiles(.yaml), based on the code provided by Yanko Ivanov.
 * Added: Resources task picks the default mapping from the filter element of
-the current profile (if specified). 
+the current profile (if specified).
 * Added: Consolidated API for RJB and JRuby, replacing the now deprecated
 JavaWrapper.
 * Added: JRuby 1.1 support (Victor Hugo Borja, Nick Sieger).
