--- a/buildr/doc/installing.textile
+++ b/buildr/doc/installing.textile
@@ -106,6 +106,8 @@ h2(#windows).  Installing on Windows
 
 *The easy way:*  The easiest way to install Ruby is using the "one-click installer":http://rubyinstaller.rubyforge.org/.  Once installed, set the @JAVA_HOME@ environment variable and run @gem install buildr@.
 
+Note: You may have to install the development kit in order to compile the native Ruby-to-Java bridge.  See "this post":http://programming-gone-awry.blogspot.com/2009/05/ruby-19-one-click-installer.html for steps to achieve this.
+
 <br>
 
 *In details:* We recommend you first upgrade to the latest version of Ruby gems:
@@ -126,7 +128,6 @@ To upgrade to a new version or install a specific version:
 > gem update buildr
 > gem install buildr -v 1.3.4
 {% endhighlight %}
-
 
 h2(#jruby).  Installing for JRuby
 
